Fixed Coptic date on mobile + Added document links

--- a/buku-bacaan-koptik/web/pages/document/document.css
+++ b/buku-bacaan-koptik/web/pages/document/document.css
@@ -63,7 +63,10 @@ document ul {
 }
 
 /* gives room for the floating-action-pill (fap :D) */
-main { padding-bottom: 100px; }
+main {
+	padding-bottom: 100px;
+	overflow-x: hidden;
+}
 
 /* SEARCH */
 document .search-container {
