--- a/buku-bacaan-koptik/web/pages/settings/settings.css
+++ b/buku-bacaan-koptik/web/pages/settings/settings.css
@@ -154,6 +154,7 @@ input[type="range"]::-moz-range-thumb {
 
 /* TIME */
 input[type="time"] {
+	width: auto;
 	margin-inline-start: auto;
     border: none;
     background: transparent;
